# Agentic-Infrastructure-1

./: .coderabbit.yaml  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.cursor/rules/: agent.mdc
.github/workflows/: main.yml
.orchestration/Artifacts/: active_intents.yaml
research/: architecture_strategy.md  tooling_strategy.md
scripts/: validate_specs.py
skills/: README.md  __init__.py
skills/skill_fetch_trends/: README.md  __init__.py  core.py
skills/skill_generate_caption/: README.md  __init__.py  core.py
skills/skill_publish_post/: README.md  __init__.py  core.py
specs/: __init__.py  _meta.md  functional.md  openclaw_integration.md  technical.md  technical.py
tests/: test_skills_interface.py  test_trend_fetcher.py
