[project]
name = "project-chimera-infra"
version = "0.1.0"
description = "Infrastructure for Autonomous AI Influencer Network"
authors = [{name = "Abdurezak Arage"}]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    "weaviate-client>=4.0.0",
    "mcp>=0.1.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["skills", "specs", "tests", "scripts", "research"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true